Fixed dat alignement.

--- a/landingpage/assets/css/_icons.scss
+++ b/landingpage/assets/css/_icons.scss
@@ -40,7 +40,7 @@
 .icon-windows:before     { content: "\e908"; }
 .icon-xbox:before        { content: "\e909"; }
 .icon-youtube:before     { content: "\e90a"; }
-.icon-blog:before        { content: "\e90b"; vertical-align: bottom;}
+.icon-blog:before        { content: "\e90b"; }
 .icon-book:before        { content: "\e91f"; }
 
 [class^="icon-c-"],
